--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,6 +37,8 @@ AutoCellLoadingMaxWorldSize=10000.000000
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DimWar")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/DimWar")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="DimWarGameModeBase")
+bUseFixedFrameRate=True
+FixedFrameRate=75.000000
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
