--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,11 +85,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Inv1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Ampersand)
 +ActionMappings=(ActionName="Inv2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E_AccentAigu)
 +ActionMappings=(ActionName="Inv3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Quote)
-+ActionMappings=(ActionName="Power1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="Power2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
-+ActionMappings=(ActionName="Power3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="Spell1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Spell2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
++ActionMappings=(ActionName="Spell3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +ActionMappings=(ActionName="Grenade",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
-+ActionMappings=(ActionName="Power4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
++ActionMappings=(ActionName="Spell4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveBackward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
